re #108 namespacing to avoid conflicts in docman

--- a/code/media/koowa/com_koowa/less/koowa/_select2.less
+++ b/code/media/koowa/com_koowa/less/koowa/_select2.less
@@ -635,3 +635,8 @@ disabled look for disabled choices in the results dropdown
         background-position: 100% -21px !important;
     }
 }
+
+/* copied from DOCman */
+.select2-drop ul {
+    margin:0 4px 4px;
+}
